[package]
name = "snek-hq-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen-futures = "0.4.50"
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos = { version = "0.7.5", features = ["csr"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"                                                          # Replace with the latest version
cfg-if = "1.0.0"
wasm-bindgen-macro = "0.2.87"
web-sys = { version = "0.3.77", features = ["IdbFactory", "Storage", "Window"] }
indexed-db = "0.4.2"
indexed_db_futures = "0.6.0"
serde-wasm-bindgen = "0.6.5"
serde = "1.0.217"
reqwest = { version = "0.12.12", features = ["json"] }
leptos_icons = "0.5.0"
icondata = "0.5.0"
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
